# semantic-equivalence-validator

./: .gitignore  Cargo.toml  Config.toml  README.md
config/: Compiler.toml
src/: cli.rs  config.rs  main.rs  utils.rs
src/analysis/: compare.rs  context.rs  executor.rs  mod.rs  result.rs
src/compiler/: mod.rs  optimization.rs
src/reporting/: error_reporter.rs  mod.rs  out.rs  report.rs
src/testsuite/: mod.rs
tests/gccrs/: arithematic_complex.rs  arithematic_simple.rs  assignment_operators.rs  bitwise_comparison_operators.rs  enums.rs  fn_pointers.rs  logical_operators.rs  pointer_basics.rs  simple_arithematic_operators.rs  struct1.rs  struct2.rs  test1.rs
tests/rustc/: arithematic_simple.rs  assignment_operators.rs  bitwise_comparison_operators.rs  complex_arithematic_operators.rs  enums.rs  fn_pointers.rs  logical_operators.rs  pointer_basics.rs  simple_arithematic_operators.rs  struct1.rs  struct2.rs
