[package]
name = "semantic-equivalence-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
log = "0.4.22"
serde = "1.0.204"
serde_derive = "1.0.204"
similar = "2.6.0"
thiserror = "1.0.61"
toml = "0.8.14"
wait-timeout = "0.2.0"

